tests/expectations/compiler/signature/signature_with_wrong_types_fail.out
Error [ETYC0372117]: Expected type `signature` but type `address` was found.
    --> compiler-test:10:45
     |
  10 |         let first: bool = signature::verify(a, s, v);
     |                                             ^
Error [ETYC0372117]: Expected type `address` but type `signature` was found.
    --> compiler-test:10:48
     |
  10 |         let first: bool = signature::verify(a, s, v);
     |                                                ^
Error [ETYC0372117]: Expected type `address` but type `u8` was found.
    --> compiler-test:11:37
     |
  11 |         let second: bool = s.verify(1u8, v);
     |                                     ^^^
Error [ETYC0372117]: Expected type `signature` but type `address` was found.
    --> compiler-test:16:45
     |
  16 |         let first: bool = signature::verify(a, v, s);
     |                                             ^
Error [ETYC0372117]: Expected type `address` but type `foo` was found.
    --> compiler-test:16:48
     |
  16 |         let first: bool = signature::verify(a, v, s);
     |                                                ^
Error [ETYC0372117]: Expected type `address` but type `foo` was found.
    --> compiler-test:17:37
     |
  17 |         let second: bool = s.verify(v, a);
     |                                     ^
